Updated the CSS and JS scripts
Updated the JS and CSS to ensure the flix works as expected.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <header class="sticky-header">
         <h1>Pokédex</h1>
+        <span id="completionTracker" class="completion-tracker"></span>
         <button id="darkModeToggle" class="dark-mode-btn">Toggle Dark Mode</button>
     </header>
     <main>
