--- a/index.html
+++ b/index.html
@@ -32,7 +32,15 @@
                 <option value="name-desc">Sort: Name (Z-A)</option>
             </select>
             <button id="encounterBtn">Encounter Wild Pokémon</button>
-            <button id="toggleMusicBtn">Toggle Music</button>
+            <select id="musicSelect">
+                <option value="off">Music: Off</option>
+                <option value="title">Main Theme</option>
+                <option value="introduction">Introduction</option>
+                <option value="littleroot">Littleroot Town</option>
+                <option value="hoenn">Journey in the Hoenn Region</option>
+                <option value="rustboro-city">Rustboro City</option>
+                <option value="gym">Gym Battle</option>
+            </select>
             <!-- <input type="range" id="musicVolume" min="0" max="1" step="0.1" value="0.5"> -->
         </div>
         <div id="loading" class="loading">Loading...</div>
@@ -68,12 +76,14 @@
     </div>
 
     <!-- Audio element for Pokémon cries -->
-    <audio id="pokemonCry" preload="none"></audio>
+    <!-- <audio id="pokemonCry" preload="none"></audio>
     <audio id="backgroundMusic" loop preload="auto">
         <source src="assets/music/backgroud-song.mp3" type="audio/mp3">
         Your browser does not support the audio element.
-    </audio> <!-- Add this -->
+    </audio> Add this -->
 
+    <audio id="pokemonCry" preload="none"></audio>
+    <audio id="backgroundMusic" loop preload="auto"></audio>
     <script src="script.js"></script>
 </body>
 </html>
